# liteplayer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: Window.cpp  Window.hpp  main.cpp
